<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg"
    tools:context=".activity.PasswordChange">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backEventListener"
        android:background="@drawable/ic_round_arrow_back_ios_new_24"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edit_password_new_repeat"
        android:layout_width="266dp"
        android:layout_height="42dp"
        android:layout_below="@+id/edit_signup_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:textAlignment="center"
        android:background="@drawable/text_view_rounded_corner"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:iconifiedByDefault="true"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_new" />

    <EditText
        android:id="@+id/edit_password_new"
        android:layout_width="266dp"
        android:layout_height="42dp"
        android:layout_below="@+id/edit_signup_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="108dp"
        android:textAlignment="center"
        android:background="@drawable/text_view_rounded_corner"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="266dp"
        android:layout_height="42dp"
        android:layout_marginTop="140dp"
        android:onClick="resetPasswordEventListener"
        android:text="@string/send"
        android:textAllCaps="false"
        app:backgroundTint="#CF3030"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_new_repeat" />
</androidx.constraintlayout.widget.ConstraintLayout>