<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".fragment.SearchDetails">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/first_layout"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginBottom="31dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="17dp"
                android:layout_weight="1"
                android:background="@drawable/ic_back"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_back"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image_back"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/image_back"
                android:fontFamily="sans-serif-thin"
                android:text="Back"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:layout_below="@+id/first_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-23dp"
            android:layout_marginEnd="0dp"
            android:background="#fef9ff"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:background="@android:color/white">

                    <!-- Table Heading -->

                    <TableRow android:background="@color/silver">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/col1"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/col2"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:text="@string/col3"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />


                    </TableRow>

                    <!-- Table Data -->

                    <TableRow>

                        <TextView
                            android:id="@+id/txt_word"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txt_phonetic"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"
                            android:padding="10sp"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/txt_sound"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:padding="15sp"
                            app:srcCompat="@drawable/speaker" />

                    </TableRow>

                </TableLayout>
            </LinearLayout>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="385dp"
            android:layout_height="447dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="12dp"
            android:background="#fef9ff"
            android:layout_marginBottom="51dp">

            <Button
                android:id="@+id/appDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="168dp"
                android:layout_marginTop="400dp"
                android:background="#BF197CD2"
                android:text="Read more"
                android:textColor="@color/black"
                android:visibility="invisible"
                app:backgroundTint="#B2397AAB"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/definitionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:text="@string/definition"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Grammar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="132dp"
                android:text="@string/grammar"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/egText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="228dp"
                android:text="Example"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tipText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="324dp"
                android:text="Tips"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/definitionValue"
                android:layout_width="338dp"
                android:layout_height="62dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="68dp"
                android:text="Definition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/grammarValue"
                android:layout_width="338dp"
                android:layout_height="62dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="156dp"
                android:text="Grammar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/egValue"
                android:layout_width="338dp"
                android:layout_height="62dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="252dp"
                android:text="Example"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tipValue"
                android:layout_width="338dp"
                android:layout_height="62dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="348dp"
                android:text="Tipe value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>


</FrameLayout>